# transon

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.cursor/: hooks.json
.cursor/commands/: fix-docs-item.md  fix-roadmap-item.md
.cursor/hooks/: check-roadmap-status.py
.cursor/rules/: adding-rules.mdc  python37-compat.mdc  status-consistency.mdc  testing-conventions.mdc  transon-overview.mdc
.github/workflows/: dev.yml  release.yml
docs/: AI_DEVELOPMENT.md  DOCS_SITE_ROADMAP.md  LANGUAGE.md  ROADMAP.md  SPECIFICATION.md
docs/assets/: transon-flow.puml
docs/proposals/: 0001-editor-metadata-export.md  0002-type-function.md  0003-editor-metadata-structural-params.md  0004-editor-metadata-example-tiers.md  0005-example-corpus-normalization.md  0006-transformer-recursion-depth-budget.md  0007-builtin-function-library.md  0008-language-reference-export.md  README.md  editor-metadata-example-tiers.md  editor-metadata-export.md  editor-metadata-structural-params.md  example-corpus-normalization.md  transformer-recursion-depth-budget.md  type-function.md
scripts/: check_roadmap.py  install-skills.sh  skills-manifest.txt
tests/: base.py  base_attr.py  base_join.py  test_attr.py  test_builtin_library.py  test_chain.py  test_context.py  test_convert.py  test_copy_output.py  test_docs.py  test_error_model.py  test_expr.py  test_file.py  test_format.py  test_include.py  test_include_loader_context.py  test_include_marker.py  test_invalid_value.py  test_join.py  test_map.py  test_metadata.py  test_no_content.py  test_no_content_batch.py  test_operators.py  test_recursion_depth.py  test_reference.py  test_roadmap_consistency.py  test_switch_cond.py  test_template_path.py  test_this.py  test_transformers.py  test_validate.py  test_zip.py
transon/: __init__.py  convertors.py  docs.py  functions.py  metadata.py  operators.py  reference.py  rules.py  transformers.py
transon/resources/: LANGUAGE.md
transon/tests/: __init__.py  base.py  base_attr.py  base_join.py  conftest.py  test_attr.py  test_chain.py  test_cond.py  test_convert.py  test_default.py  test_error_model.py  test_expr.py  test_file.py  test_filter.py  test_format.py  test_format_no_content.py  test_functions_collection.py  test_functions_date.py  test_functions_encoding.py  test_functions_string.py  test_include.py  test_join.py  test_join_no_content.py  test_map.py  test_no_content.py  test_object.py  test_operators.py  test_recipes.py  test_set.py  test_split.py  test_switch.py  test_type.py  test_worked_examples.py  test_zip.py
