[tool.poetry]
name = "transon"
version = "0.0.5"
description = "Homogenous JSON template engine"
authors = ["Eugene Chernyshov <chernyshov.eugene@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"

[project.urls]
"Homepage" = "https://github.com/transon-org/transon"
"Bug Tracker" = "https://github.com/transon-org/transon/issues"

[tool.poetry.group.dev.dependencies]
exceptiongroup = { version = "*", python = "<3.11" }
pytest = "*"
pytest-subtests = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
