[tool.poetry]
name = "transon"
version = "0.0.7"
description = "Homogenous JSON template engine"
authors = ["Eugene Chernyshov <chernyshov.eugene@gmail.com>"]
readme = "README.md"
repository = "https://github.com/transon-org/transon"
documentation = "https://transon-org.github.io/"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/transon-org/transon/issues"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "^6.5.0", python = "3.7"}

[tool.poetry.group.dev.dependencies]
exceptiongroup = { version = "^1.1.1", python = "<3.11" }
pytest = "^7.3.1"
pytest-subtests = "^0.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
