[project]
name = "transon"
version = "0.1.1"
description = "Homogeneous JSON template engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Eugene Chernyshov", email = "chernyshov.eugene@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/transon-org/transon"
Documentation = "https://transon-org.github.io/"
Repository = "https://github.com/transon-org/transon"
"Bug Tracker" = "https://github.com/transon-org/transon/issues"

[dependency-groups]
dev = [
    "exceptiongroup>=1.1.1; python_version < '3.11'",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pytest-subtests>=0.10.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transon"]

[tool.hatch.build.targets.sdist]
only-include = [
    "transon",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
